--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@ var settings = {
     autoplay : true, // defaults to false (only works on desktop)
     muted : true, // it's recommended to omit this parameter *
     videoFiles : [
-        {'src':'BigBuckBunny_640x360.m4v'}
-       ,{'src':'BigBuckBunny_640x360.webm','type':'video/webm'}
-       ,{'src':'BigBuckBunny_640x360.ogv','type':'video/ogg'}
+       {'src':'BigBuckBunny_640x360.webm','type':'video/webm'}
        ,{'src':'BigBuckBunny_640x360.mp4','type':'video/mp4'}
     ]
 };
