--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <script>
 
 document.addEventListener('DOMContentLoaded', function(){
+    "use strict";
+    
     var settings = {
         width : 300,
         height : 250,
