--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!doctype html>
 <html>
 <head>
+<style>
+    html, body{
+        width: 100%;
+        height: 100%;
+    }
+
+    #video_container{
+        display: flex;
+        width: 100%;
+        height: 100%;
+        align-items: center;
+        justify-content: middle;
+    }
+</style>
+    
 <!-- WEBORAMA SCREENAD META DATA (don't edit/remove) -->
 <!-- SCRWIDTH: 600 -->
 <!-- SCRHEIGHT: 360 -->
