--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         width: 100%;
         height: 100%;
         align-items: center;
-        justify-content: middle;
+        justify-content: center;
     }
 </style>
     
