--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ document.addEventListener('DOMContentLoaded', function(){
     var myVideo = new screenad.video.VideoPlayer(settings);
     var videoEl = myVideo.getVideoElement();
     videoEl.addEventListener('click', function(){
-        window.location = 'http://concours-sesame.net';
+        window.location = 'http://www.concours-sesame.net/mySesame/';
     })
 })
 
