--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ document.addEventListener('DOMContentLoaded', function(){
         muted : false, // it's recommended to omit this parameter *
         videoFiles : [
            {'src':'SESAME_WEBORAMA_WEBM.webm','type':'video/webm'},
-           {'src':'SESAME_WEBORAMA_H264.mp4','type':'video/mp4'}
+           {'src':'SESAME_WEBORAMA_H264.mp4','type':'video/mp4'},
+           {'src':'SESAME_WEBORAMA_FLV.flv','type':'video/flv'}
         ]
     };
     
