--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ document.addEventListener('DOMContentLoaded', function(){
 })
 
 </script>
-<script type="text/javascript" src="//media.adrcdn.com/scripts/screenad_interface_1.0.3_scrambled.js"></script>
+<script type="text/javascript" src="http://media.adrcdn.com/scripts/screenad_interface_1.0.3_scrambled.js"></script>
 </head>
 <body>
 <div id="video_container"></div>
